--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,19 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+            tools:ignore="AllowBackup,GoogleAppIndexingWarning,LockedOrientationActivity"
             >
+        <activity android:name=".Luisterlijst"
+                android:configChanges="orientation"
+                android:screenOrientation="unspecified"
+                android:parentActivityName=".MainActivity"
+                />
         <activity
                 android:name=".VerbGame"
                 android:configChanges="orientation"
-                android:parentActivityName=".MainActivity"
                 android:screenOrientation="portrait"
+                android:parentActivityName=".MainActivity"
+
                 />
         <activity
                 android:name=".Splash"
@@ -26,13 +32,13 @@
         <activity
                 android:name=".Hangman"
                 android:configChanges="orientation"
-                android:parentActivityName=".MainActivity"
                 android:screenOrientation="portrait"
+                android:parentActivityName=".MainActivity"
                 />
         <activity
                 android:name=".FilterAndSort"
-                android:configChanges="orientation"
                 android:screenOrientation="portrait"
+                android:configChanges="orientation"
                 android:windowSoftInputMode="stateHidden"
                 />
         <activity
@@ -53,6 +59,7 @@
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
