--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             >
         <activity android:name=".Luisterlijst"
                 android:configChanges="orientation"
-                android:screenOrientation="unspecified"
+                android:screenOrientation="portrait"
                 android:parentActivityName=".MainActivity"
                 />
         <activity
