--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "driemondglas.nl.zorba"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 130
-        versionName "2.5.0 Imperative"
+        versionCode 131
+        versionName "3.1.0 ListenList"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,8 +29,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.koushikdutta.ion:ion:2.2.1'
-
+    implementation 'com.android.volley:volley:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.13'
