--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         package="driemondglas.nl.zorba"
         >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:allowBackup="true"
@@ -22,7 +25,6 @@
                 android:configChanges="orientation"
                 android:screenOrientation="portrait"
                 android:parentActivityName=".MainActivity"
-
                 />
         <activity
                 android:name=".Splash"
