--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,5 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -12,8 +9,8 @@ android {
         applicationId "driemondglas.nl.zorba"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 132
-        versionName "3.1.0 ListenList"
+        versionCode 136
+        versionName "3.2.0 view binding"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -21,6 +18,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures {
+        viewBinding true
     }
 }
 
