--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,9 +50,9 @@
                 />
         <activity
                 android:name=".FlashCard"
-                android:configChanges="orientation"
                 android:parentActivityName=".MainActivity"
                 android:screenOrientation="portrait"
+                android:configChanges="orientation|keyboardHidden|screenSize"
                 />
         <activity
                 android:name=".MainActivity"
